<resources>
    <string name="app_name">Coworker</string>
    <string name="agree_continue"><![CDATA[Agree & Continue]]></string>
    <string name="next">Next</string>
    <string name="terms_text">Tap \"Agree and Continue\" to accept the</string>
    <string name="done">Done</string>
    <string name="delete">Delete Account</string>
    <string name="server_error">Oops ! Server problem. Please try again.</string>
    <string name="mobile_number">Verify your mobile number</string>
    <string name="mobile_num">Mobile number</string>
    <string name="verify_des">Coworker will send you on SMS to verify your mobile numner. Please confirm your mobile number.</string>
    <string name="verify_number">Waiting to automatically detect SMS sent to </string>
    <string name="country">Country</string>
    <string name="welcome_to_zeochat">Welcome to Coworker</string>
    <string name="action_settings">Settings</string>
    <string name="new_group">New Group</string>
    <string name="add_contact">Add Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="type_your_message">Type a message</string>
    <string name="no_internet">Kindly check your internet connection</string>
    <string name="empty_contact">Invite your friends and family to Coworker Messenger to chat with them.</string>
    <string name="empty_chat">You have no conversation yet</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
    AIzaSyB5wZPeDB1UKk7qWBpiDj0g3zqsrNGI-no
</string>
    <string name="private_app_id">ff4b9b4d0d314a51b4883122f64ec4c5</string>
    <string name="title_activity_share_location">Send Location</string>
    <string name="forward">forward</string>
    <string name="favourite">favourite</string>
    <string name="info">info</string>
    <string name="edit_group_name">Edit Group</string>
    <string name="qr_code_header">Visit web.zoechat.com on your computer and scan QR Code</string>
    <string name="web">Coworker Web</string>
    <string name="notification_tone">Notification tone</string>
    <string name="default_tone">Default ringtone(Talitha)</string>
    <string name="vibrate">Vibrate</string>
    <string name="default_value">default</string>
    <string name="pop_up">Popup notification</string>
    <string name="no_pop">No popup</string>
    <string name="light">Light</string>
    <string name="white">White</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="reset">Reset Notification settings</string>
    <string name="play_sounds">Play Sounds for incoming and outgoing messages</string>
    <string name="conv_tones">Conversation tones</string>
    <string name="show_starred">Starred messages</string>
    <string name="invite">Invite Friends</string>
    <string name="invite_one">Invite</string>
    <string name="admin">Group Admin</string>
    <string name="media_auto">Media auto-download</string>
    <string name="using_mobile">When using mobile data</string>
    <string name="no_media">No media</string>
    <string name="connected_to">When connected on Wi-Fi</string>
    <string name="all_media">All media</string>
    <string name="when_roaming">When roaming</string>
    <string name="note">NOTE: Voice messages are always automatically downloaded for the best communication experience</string>
    <string name="auto_down">Download Settings</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="other_chats">Other contacts</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="who_can">Who can see my personal info</string>
    <string name="last_seen">Last seen</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="status">Status</string>
    <string name="note_privacy">if you dont share your Last Seen, you won\'t be able to see other people\'s Last Seen</string>
    <string name="userstatus">User Status</string>
    <string name="media_settings">Media Settings</string>
    <string name="recovery_email_text">Your Email is used to reach you incase you accidentally got locked</string>
    <string name="recovery_mobile_text">Your recovery phone is used to reach you incase we detect unusual activity in your account or you accidentally locked out</string>
    <string name="enter_you_email">Enter your mail id</string>
    <string name="enter_you_phone">Enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="enter_pass">Enter your password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lock_chat">Lock Chat</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="enter_you_otp">Enter your OTP</string>
    <string name="otp">OTP</string>
    <string name="remove_lock">remove_lock</string>
    <string name="star_empty">Tap and hold on any chat to star it so you can easily find it later.</string>
    <string name="group_chat">New Group Chat</string>
    <string name="single_chat">New Chat</string>
    <string name="carrier_charges">Carrier SMS charges may apply</string>
    <string name="profile_info">Please provide your name and an optional profile photo</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="cancel">Cancel</string>
    <string name="new_subject">Enter New Subject</string>
    <string name="recording">Recording</string>
    <string name="profile_info_first">Profile Info</string>
    <string name="notifications">Notifications</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="group_notification">Group Notifications</string>
    <string name="call_notifi">Call Notifications</string>
    <string name="enter_six">Enter 6-digit code</string>
    <string name="call">Call</string>
    <string name="group">Type group subject here...</string>
    <string name="provide">Provide a group subject and optional group icon</string>
    <string name="settiings">Settings</string>
    <string name="share_location">Share Location</string>
    <string name="Zoechat_call">Coworker Call</string>
    <string name="message_him">Message him</string>
    <string name="make_group">Make Group admin</string>
    <string name="view_him">View him</string>
    <string name="remove_him">Remove him</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="status_and_phone">Status and Phone</string>
    <string name="media">Media</string>
    <string name="participants">Participants</string>
    <string name="parti_add">Add Participant...</string>
    <string name="exit_the_group">Exit the Group</string>
    <string name="read">Read</string>
    <string name="Delievered">Delivered</string>
    <string name="typing">typing . . .</string>
    <string name="online">online</string>
    <string name="already_in_group">Already in Group</string>
    <string name="invite_this">Invite this contact</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="enter_valid_name">Enter the name</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="sticker">Sticker</string>
    <string name="you">You</string>
    <string name="message">Message</string>
    <string name="view">View</string>
    <string name="remove">Remove</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="gallery">Gallery</string>
    <string name="defaulet">Default</string>
    <string name="wall_preview">Wallpaper Preview</string>
    <string name="today">Today</string>
    <string name="demo_preview">Hello, How are you?</string>
    <string name="demo_2">I am fine. How about you?</string>
    <string name="set">Set</string>
    <string name="no_wall">No Wallpaper</string>
    <string name="ringing">Ringing</string>
    <string name="whatsapp_voice_call">Coworker Voice Call</string>
    <string name="whatsapp_video_call">Coworker Video Call</string>
    <string name="incoming">incoming</string>
    <string name="doodle_title">Draw a doodle</string>
    <string name="yesterday">Yesterday</string>
    <string name="contact_us">Contact us</string>
    <string name="new_channel">New Channel</string>
    <string name="description">Description</string>
    <string name="channel_text">You can provide an optional description for your channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="public_channel">Public Channel</string>
    <string name="public_channel_text">Public channels can be found in seah,anyone can join them.</string>
    <string name="private_channel">Private Channel</string>
    <string name="private_channel_text">Private Channels can only be joined via an invite link.</string>
    <string name="link">Link</string>
    <string name="linkk">link</string>
    <string name="t.me">t.me/</string>
    <string name="channel_textt">People can share this link with others and find your channel using Telegram search</string>
    <string name="sign_mess">Sign Messages</string>
    <string name="sign_text">Add names of the admins to the messages they post</string>
    <string name="delete_messa">You will lose all the messages in this channel.</string>
    <string name="channel_info">Channel Info</string>
    <string name="recent_actions">Recent Actions</string>
    <string name="administr">Administrators</string>
    <string name="turn_on">Turn On</string>
    <string name="mute_for">Mute for 1 hour</string>
    <string name="mute_for_2">Mute for 2 days</string>
    <string name="customize">Customize</string>
    <string name="turn_off">Turn off</string>
    <string name="copy_link">Copy Link</string>
    <string name="revoke_link">Revoke Link</string>
    <string name="share_link">Share Link</string>
    <string name="invite_text">Anyone who has Coworker installed will be able to join your channel by following this link</string>
    <string name="dummy_link">https://t.me/joinchat/AAASDASsdkfOIERPWDlas</string>
    <string name="invite_via_link">Invite Via Link</string>
    <string name="manage_channel">Manage Channel</string>
    <string name="add_admin">Add administrator</string>
    <string name="admin_text">You can add administrators to help you manage your channel. Tap and hold to remove admins.</string>
    <string name="channel_description">Channel Description</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="enable_custom">Enable Custom Notifications</string>
    <string name="general">General</string>
    <string name="sound">Sound</string>
    <string name="noti_text">Higher priority notifications will work even if your phone is in Do Not Disturb mode.</string>
    <string name="led">LED</string>
    <string name="color">Color</string>
    <string name="mute">Mute</string>
    <string name="terms_textt">Coworker terms of Service and Privacy Policy</string>
    <string name="forward_to">Forward to...</string>
    <string name="add_part">Add Participants to the group</string>
    <string name="add_friends">Add Friends to your Channel</string>
    <string name="invite_your">Invite Your Friends</string>
    <string name="select_part">Select Participants</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="image">Image</string>
    <string name="doodle">Doodle</string>
    <string name="resend">Resend code in 00:30</string>
</resources>