<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bitware.coworker.MainActivity">
    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/new_msg"
        android:orderInCategory="100"
        android:title="@string/new_msg"
        app:showAsAction="never" />-->
    <!--    <item
            android:id="@+id/update_status"
            android:orderInCategory="100"
            android:title="@string/update_status"
            app:showAsAction="never" />-->


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/invite_friends"
        android:orderInCategory="100"
        android:title="@string/invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/add_contact"
        android:icon="@drawable/ic_person_add"
        android:orderInCategory="100"
        android:title="@string/add_contact"
        app:showAsAction="never" />


</menu>
