<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward"
        android:orderInCategory="101"
        android:title="@string/forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_star"
        android:orderInCategory="102"
        android:title="@string/favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline"
        android:orderInCategory="103"
        android:title="@string/info"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="104"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>