<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bitware.coworker.activity.AutoDownloadSettings">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:foregroundGravity="top"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tint="@color/white"

                    app:srcCompat="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/context_menu"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/back"
                    android:text="@string/auto_down"
                    android:textColor="@android:color/white" />


            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/head_text"
            android:layout_marginTop="25dp"
            android:text="@string/media_auto"
            android:textColor="@color/d_teal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/mobile_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/using_mobile"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mobile_data_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/no_media"
                android:textSize="15sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:background="@color/trans_black" />


        <LinearLayout
            android:id="@+id/wifi_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_to"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wifi_data_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/all_media"

                android:textSize="15sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/trans_black" />

        <LinearLayout
            android:id="@+id/roaming_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_roaming"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/roaming_data_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"

                android:text="@string/no_media"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:textSize="16sp"
            android:padding="8dp"
            android:lineSpacingExtra="4dp"
            android:letterSpacing="0.1"
            android:background="@color/light_gray"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
