<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_weight_gray"
    android:orientation="vertical"
    tools:context="com.bitware.coworker.activity.CustomizeNotification">

    <android.support.v7.widget.Toolbar
        android:id="@+id/group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <RelativeLayout
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_toolbar"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/enable_custom"
            android:textSize="17dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:id="@+id/enable_check"
            android:buttonTint="@color/grey" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/head_1"
            android:layout_marginTop="15dp"
            android:text="@string/general"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sound_lay"

            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:text="@string/sound"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/sound_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/defaulet"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginTop="15dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/vibrate_lay"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:text="@string/vibrate"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/vibrate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/defaulet"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_text"
        android:textColor="@color/dark_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/part_list"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/led"
            android:id="@+id/head_2"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/led_lay"

            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/sign_switch"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
